0032064: Coding Rules - make RWGltf_GltfJsonParser non-private